<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:id="@+id/exp_wizard_page">

    <Spinner
        android:id="@+id/spin_cond_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/condition1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_wizard_field"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/spin_cond_type"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_condition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/exp_wizard_exp_hint"
        app:layout_constraintTop_toBottomOf="@id/spin_cond_type"
        app:layout_constraintBottom_toTopOf="@id/tv_add_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border_grey"/>
    <TextView
        android:id="@+id/tv_add_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp_add_condition"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/container_add_condition2" />
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_exp_undo"
        android:id="@+id/container_add_condition1"
        android:visibility="invisible">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_exp_contains"
            android:text="@string/exp_contains"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_exp_not_contains"
            android:text="@string/exp_not_contains"
            app:layout_constraintStart_toEndOf="@id/btn_exp_contains"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_exp_undo"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/container_add_condition2"
        android:visibility="visible">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_exp_and_contains"
            android:text="@string/exp_and_contains"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_exp_and_not_contains"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_exp_and_not_contains"
            android:text="@string/exp_and_not_contains"
            app:layout_constraintStart_toEndOf="@id/btn_exp_and_contains"
            app:layout_constraintEnd_toStartOf="@id/btn_exp_or_contains"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_exp_or_contains"
            android:text="@string/exp_or_contains"
            app:layout_constraintStart_toEndOf="@id/btn_exp_and_not_contains"
            app:layout_constraintEnd_toStartOf="@id/btn_exp_or_not_contains"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_exp_or_not_contains"
            android:text="@string/exp_or_not_contains"
            app:layout_constraintStart_toEndOf="@id/btn_exp_or_contains"
            app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_exp_undo"
        android:text="@string/exp_undo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_exp_redo"
        android:enabled="false"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_exp_redo"
        android:text="@string/exp_redo"
        app:layout_constraintStart_toEndOf="@id/btn_exp_undo"
        app:layout_constraintEnd_toStartOf="@id/btn_exp_reset"
        app:layout_constraintTop_toTopOf="@+id/btn_exp_undo"
        android:enabled="false"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_exp_reset"
        android:text="@string/exp_reset"
        app:layout_constraintStart_toEndOf="@id/btn_exp_redo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_exp_undo"
        android:enabled="false"/>
</android.support.constraint.ConstraintLayout>