<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="left"
    android:id="@+id/task_item">
    <TextView
        android:id="@+id/task_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/task_title" />
    <TextView
        android:id="@+id/task_item_expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/task_expression" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/task_item_new_task_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_new_task_count" />

        <TextView
            android:id="@+id/task_item_expire_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_expire_time" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@drawable/separator"
        android:layerType="software"
        android:orientation="horizontal" />
</LinearLayout>