<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="left"
    android:id="@+id/job_query_result_item">
    <TextView
        android:id="@+id/job_query_result_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/job_title_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/job_query_result_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/job_location_content" />
        <LinearLayout
            android:layout_width="2dip"
            android:layout_height="match_parent"
            android:background="@drawable/separator"
            android:layerType="software"
            android:orientation="vertical" />
        <TextView
            android:id="@+id/job_query_result_item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/job_type_content" />
        <LinearLayout
            android:layout_width="2dip"
            android:layout_height="match_parent"
            android:background="@drawable/separator"
            android:layerType="software"
            android:orientation="vertical" />
        <TextView
            android:id="@+id/job_query_result_item_hiring_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/job_hiring_number_content" />
        <LinearLayout
            android:layout_width="2dip"
            android:layout_height="match_parent"
            android:background="@drawable/separator"
            android:layerType="software"
            android:orientation="vertical" />
        <TextView
            android:id="@+id/job_query_result_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/job_date_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@drawable/separator"
        android:layerType="software"
        android:orientation="horizontal" />
</LinearLayout>