<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="left"
    android:id="@+id/query_item">
    <TextView
        android:id="@+id/query_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:text="@string/query_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/query_item_expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/query_expression" />
        <TextView
            android:id="@+id/query_item_result_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="28"
            android:text="@string/query_result_count" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@drawable/separator"
        android:layerType="software"
        android:orientation="horizontal" />
</LinearLayout>