<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:layout_marginBottom="56dp"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/header_detail"
                android:background="#f9f4f4"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_job_detail_header_content"
                    android:layout_centerInParent="true"
                    android:text="职位详情页(第30个)"
                    android:textColor="#000"
                    android:textSize="18sp"
                    />
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/iv_job_detail_back"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/ic_back_black_24dp"
                    />
            </RelativeLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@drawable/separator"
                android:layerType="software"
                android:orientation="horizontal" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="2dp"
                    android:text="@string/job_title" />
                <TextView
                    android:id="@+id/tv_job_detail_title_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/job_title_content"
                    android:textColor="#000"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintTop_toTopOf="@id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintEnd_toStartOf="@id/bookmark"/>
                <ImageButton
                    android:id="@+id/bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="收藏"
                    android:scaleType="center"
                    android:src="@drawable/is_bookmarked"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@drawable/separator"
                android:layerType="software"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/job_location"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_job_detail_location_content"
                        android:text="@string/job_location_content"
                        android:textColor="#000"
                        android:layout_marginLeft="18dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/job_type"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_job_detail_type_content"
                        android:text="@string/job_type_content"
                        android:textColor="#000"
                        android:layout_marginLeft="18dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/job_hiring_number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_job_detail_hiring_number_content"
                        android:text="@string/job_hiring_number_content"
                        android:textColor="#000"
                        android:layout_marginLeft="18dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@drawable/separator"
                android:layerType="software"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_duties"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_job_detail_duties_content"
                    android:text="@string/job_duties_content"
                    android:textColor="#000"
                    android:layout_margin="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@drawable/separator"
                android:layerType="software"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_requirements"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_job_detail_requirements_content"
                    android:text="@string/job_requirements_content"
                    android:textColor="#000"
                    android:layout_margin="8dp"/>
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemBackground="@color/lighter_grey"
        style="@style/Widget.Tjh.BottomNavigationView"
        app:menu="@menu/bottom_nav_items" />
</android.support.design.widget.CoordinatorLayout>